syntax = "proto3";
option go_package = "github.com/sllt/kite/examples/grpc/grpc-unary-client/client";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Hello {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}
